--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "jsxcss",
-  "version": "1.0.0-beta.2",
+  "version": "1.0.0-beta.3",
   "description": "JSX pragma to transform style prop into CSS with support for pseudo-classes and media queries",
   "main": "dist/index.js",
   "scripts": {
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "aphrodite": "^0.4.0",
+    "cxs": "^1.0.0-beta.4",
     "hyperscript": "^1.4.7",
     "react": "^15.1.0"
   },
